; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/omapdrm/dss/extr_dss.c_dss_select_hdmi_venc_clk_source.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/omapdrm/dss/extr_dss.c_dss_select_hdmi_venc_clk_source.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dss_device = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32* }

@OMAP_DSS_CHANNEL_DIGIT = common dso_local global i64 0, align 8
@DSS_VENC_TV_CLK = common dso_local global i32 0, align 4
@OMAP_DSS_OUTPUT_VENC = common dso_local global i32 0, align 4
@DSS_HDMI_M_PCLK = common dso_local global i32 0, align 4
@OMAP_DSS_OUTPUT_HDMI = common dso_local global i32 0, align 4
@DSS_CONTROL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dss_select_hdmi_venc_clk_source(%struct.dss_device* %0, i32 %1) #0 {
  %3 = alloca %struct.dss_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.dss_device* %0, %struct.dss_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.dss_device*, %struct.dss_device** %3, align 8
  %7 = getelementptr inbounds %struct.dss_device, %struct.dss_device* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = load i64, i64* @OMAP_DSS_CHANNEL_DIGIT, align 8
  %12 = getelementptr inbounds i32, i32* %10, i64 %11
  %13 = load i32, i32* %12, align 4
  store i32 %13, i32* %5, align 4
  %14 = load i32, i32* %4, align 4
  %15 = load i32, i32* @DSS_VENC_TV_CLK, align 4
  %16 = icmp eq i32 %14, %15
  br i1 %16, label %17, label %23

17:                                               ; preds = %2
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* @OMAP_DSS_OUTPUT_VENC, align 4
  %20 = and i32 %18, %19
  %21 = icmp ne i32 %20, 0
  %22 = xor i1 %21, true
  br label %23

23:                                               ; preds = %17, %2
  %24 = phi i1 [ false, %2 ], [ %22, %17 ]
  %25 = zext i1 %24 to i32
  %26 = call i32 @WARN_ON(i32 %25)
  %27 = load i32, i32* %4, align 4
  %28 = load i32, i32* @DSS_HDMI_M_PCLK, align 4
  %29 = icmp eq i32 %27, %28
  br i1 %29, label %30, label %36

30:                                               ; preds = %23
  %31 = load i32, i32* %5, align 4
  %32 = load i32, i32* @OMAP_DSS_OUTPUT_HDMI, align 4
  %33 = and i32 %31, %32
  %34 = icmp ne i32 %33, 0
  %35 = xor i1 %34, true
  br label %36

36:                                               ; preds = %30, %23
  %37 = phi i1 [ false, %23 ], [ %35, %30 ]
  %38 = zext i1 %37 to i32
  %39 = call i32 @WARN_ON(i32 %38)
  %40 = load i32, i32* %5, align 4
  %41 = load i32, i32* @OMAP_DSS_OUTPUT_VENC, align 4
  %42 = and i32 %40, %41
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %44, label %54

44:                                               ; preds = %36
  %45 = load i32, i32* %5, align 4
  %46 = load i32, i32* @OMAP_DSS_OUTPUT_HDMI, align 4
  %47 = and i32 %45, %46
  %48 = icmp ne i32 %47, 0
  br i1 %48, label %49, label %54

49:                                               ; preds = %44
  %50 = load %struct.dss_device*, %struct.dss_device** %3, align 8
  %51 = load i32, i32* @DSS_CONTROL, align 4
  %52 = load i32, i32* %4, align 4
  %53 = call i32 @REG_FLD_MOD(%struct.dss_device* %50, i32 %51, i32 %52, i32 15, i32 15)
  br label %54

54:                                               ; preds = %49, %44, %36
  ret void
}

declare dso_local i32 @WARN_ON(i32) #1

declare dso_local i32 @REG_FLD_MOD(%struct.dss_device*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
